@@ -77,11 +77,6 @@
 #define Is_in_value_area(a)                                     \
   (Classify_addr(a) & (In_heap | In_young | In_static_data))
 
-#define Is_in_code_area(pc) \
- (    ((char *)(pc) >= caml_code_area_start && \
-       (char *)(pc) <= caml_code_area_end)     \
-   || (Classify_addr(pc) & In_code_area) )
-
 #define Is_in_static_data(a) (Classify_addr(a) & In_static_data)
 
 /***********************************************************************/
@@ -93,7 +88,6 @@ extern char * caml_code_area_start, * caml_code_area_end;
 #define In_heap 1
 #define In_young 2
 #define In_static_data 4
-#define In_code_area 8
 
 #ifdef ARCH_SIXTYFOUR
 
